# GraphAgent

./: .gitignore  Comprehensive_GraphRAG_Evaluation_Dataset_300.json  README.md  README_technical_overview.md  crawl.ipynb  main.py  pyproject.toml
data/FAQ/: chevrolet_faq_target_data.json
docs/: ARCHITECTURE.md  EXECUTION_FLOW.md
eval/reports/: Baseline_chunking.json  parent_child.json
src/Chevolet_GraphRAG/: __init__.py  config.py  evaluate_retriever.py  legacy_main.py  legacy_neo4j_store.py  main.py  models.py  neo4j_store.py  providers.py
src/Chevolet_GraphRAG/agent/: __init__.py  legacy_workflow.py  session_store.py  workflow.py
src/Chevolet_GraphRAG/api/: __init__.py  app.py
src/Chevolet_GraphRAG/cypher/: legacy_schema.cypher  schema.cypher
src/Chevolet_GraphRAG/ingest/: __init__.py  catalog.py  legacy_pipeline.py  legacy_schema.py  parser.py  pipeline.py  profiler.py  schema.py
src/Chevolet_GraphRAG/observability/: __init__.py  langfuse_client.py  langsmith_client.py
src/Chevolet_GraphRAG/retrieval/: __init__.py  chroma_faq.py  guardrails.py  hybrid.py  legacy_hybrid.py
src/Chevolet_GraphRAG/ui_static/: app.js  index.html  style.css
tools/: build_final_presentation.py  check_neo4j.py  evaluate_graphrag.py  evaluate_graphrag_legacy.py  generate_eval_dataset.py  visualize_chunking_comparison.py
